<resources>
    <string name="app_name">췍길만걷자</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_qrcode">QRCode</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_chat">Board</string>

    <!-- IntroSlider 에 필요한 String -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">췍길만 걷자</string>
    <string name="slide_1_desc">한국폴리텍\n융합기술교육원\n출석 체크 앱</string>

    <string name="slide_2_title">학생 인증을 해 주세요.</string>
    <string name="slide_2_desc">먼저,</string>

    <string name="slide_3_title">QR코드를 요청하세요.</string>
    <string name="slide_3_desc">인증을 마쳤다면</string>

    <string name="slide_4_title">단 1초면 충분합니다.</string>
    <string name="slide_4_desc">출석 체크에 걸리는 시간</string>

    <string name="slide_5_title">췍길만 걷자</string>
    <string name="slide_5_desc">이제</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_setting">SettingActivity</string>

    <!-- 새로 추가한 것 -->
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">로그인</string>

    <!-- Strings related to login -->
    <string name="prompt_id">ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_in_short">로그인</string>
    <string name="error_invalid_email">학번을 다시 확인해 주세요.</string>
    <string name="error_invalid_password">Password 길이가 너무 짧습니다.</string>
    <string name="error_incorrect_password">비밀번호가 맞지 않습니다.</string>
    <string name="error_field_required">필수 입력 사항 입니다.</string>
    <!-- 이 부분은 향후 수정될 수 있음. -->
    <string name="permission_rationale">"이메일 제공을 위해 연락처를 사용합니다.</string>

</resources>
