<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_qrcode"
        android:icon="@drawable/ic_nfc_black_24dp"
        android:title="@string/title_qrcode" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_event_available_black_24dp"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_forum_black_24dp"
        android:title="@string/title_chat" />

    <!--<item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />-->
</menu>
